[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbproject"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbformat",
    "loguru",
    "pandas",
    "pydantic",
    "pyyaml",
    "stdlib_list"
]

[project.urls]
Home = "https://github.com/laminlabs/nbproject"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
]
test = [
    "pytest>=6.0",
    "nbmake",
    "notebook"
]

[project.scripts]
nbproject = "nbproject.__main__:main"

[tool.black]
preview = true
