[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbproject"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "loguru",
    "pydantic",
    "pyyaml",
    "packaging",
    "orjson",
    "ipylab",
    "nbproject_test",
    "importlib-metadata",
    "stdlib_list; python_version < '3.10'"
]

[project.urls]
Home = "https://github.com/laminlabs/nbproject"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "pandas",
    "nbformat",
    "nbclient"
]

[project.scripts]
nbproject = "nbproject.__main__:main"

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "docs/tutorials",
    "docs/guides",
]

[tool.coverage.run]
omit = [
    "nbproject/*",
]
